# CORTEX

./: .cortex  .env.example  .gitignore  .npmignore  LICENSE  README.md  boot.js  council_of_critics.py  install.ps1  install.sh  package-lock.json  package.json  scratch_test_color.js  tsconfig.json
.claude/: settings.local.json
.cortex_plugins/: policy.json
.github/workflows/: release.yml
BIGROCK_ASI/: input.txt  package-lock.json  package.json  run_benchmarks.ts  test_mythos.ts
BIGROCK_ASI/bigrock-kernel/: Cargo.toml
BIGROCK_ASI/bigrock-kernel/src/: lib.rs
BIGROCK_ASI/data/: memory.json
BIGROCK_ASI/models/: .absorption_cache.json  .neural_extract.json
BIGROCK_ASI/src/: index.ts  prove_devourer.ts  run_ascendancy_test.ts  run_max_limit_test.ts  test_bigrock_asi.ts  types.ts
cloud-setup/: deploy.sh  index.html  main.tf  variables.tf
cortex/: .env.example  ARCHITECTURE.md  BILLION_SCALE_TRAINING.md  CORTEX_CODEBASE.txt  DATASET_TRANSFER_GUIDE.md  GPU_TRAINING.md  QUICK_REFERENCE.md  README.md  TRAINING_STATUS.md  config.yaml  convert_docx.py  demo.py  extract_qa_docx.py  extract_qa_from_docx.py  load_questions.py  main.py  preflight_check.py  questions_sample.txt  requirements.txt  requirements_transfer.txt  transfer_dataset.py
cortex/.claude/: settings.local.json
cortex/cortex/: cli.py  config.py  renderer.py  shell.py
data/: memory.json
src/: Dashboard.tsx  cli.tsx  math.ts  setup.ts  ui.tsx
src/agents/: BigrockAgent.ts  (+9 more)
web-landing/: index.html  package-lock.json  package.json
workflows/: BigrockOsUpgrade.ts  sample_network_workflow.json
(+170 files in other folders)
